force-app/main/default/objects/Ad_Sources__mdt/Ad_Sources__mdt.object-meta.xml
<CustomObject>
    <description>Ad Sources for Data Collection</description>
    <label>Ad Sources</label>
    <pluralLabel>Ad Sources</pluralLabel>
</CustomObject>