force-app/main/default/objects/Ad_Sources__mdt/fields/CallRevu_360_ID__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_360_ID__c</fullName>
    <label>CallRevu 360 ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>