force-app/main/default/objects/Ad_Sources__mdt/fields/Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Rep_Email__c</fullName>
    <label>Rep Email</label>
    <type>Email</type>
</CustomField>