force-app/main/default/objects/Ad_Sources__mdt/fields/Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Name__c</fullName>
    <label>Rep Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>